# sda

./: .gitignore  Jenkinsfile  README.md
cli/: .gitignore  Cargo.toml
cli/src/: errors.rs  main.rs
cliclient/: Cargo.toml
cliclient/src/: main.rs
client/: Cargo.toml
client-http/: Cargo.toml
client-http/src/: authtoken.rs  client.rs  errors.rs  lib.rs  main.rs  tokenstore.rs
client-store/: Cargo.toml
client-store/src/: errors.rs  file.rs  lib.rs  store.rs
client/src/: clerk.rs  discover.rs  errors.rs  fetch.rs  identity.rs  keys.rs  lib.rs  participate.rs  profile.rs  receive.rs  trust.rs  user.rs
client/src/cache/: file.rs  mod.rs
client/src/crypto/: ae.rs  lss.rs  masking.rs  mod.rs
client/src/crypto/ae/: mod.rs  sodium.rs
client/src/crypto/encryption/: mod.rs  paillier.rs  sodium.rs
client/src/crypto/lss/: additive.rs
client/src/crypto/masking/: chacha.rs  full.rs  mod.rs  none.rs
client/src/crypto/sharing/: additive.rs  batched.rs  combiner.rs  helpers.rs  mod.rs  packed_shamir.rs
client/src/crypto/signing/: mod.rs
client/src/keystore/: filestore.rs  jfs.rs  jsonfile.rs  mod.rs
client/src/service/: cache.rs  discover.rs  fetch.rs  mod.rs
client/src/service/cache/: mod.rs  nocache.rs
client/src/store/: mod.rs
client/src/trust/: mod.rs  pessimistic.rs
client/tests/: mock.rs  recipient.rs  user.rs
docs/: README.md  simple-cli-example.sh
docs/cli/: search-index.js
docs/cli/sda/: index.html
docs/cli/src/sda/: errors.rs.html  main.rs.html
docs/client/: search-index.js
docs/client-http/: search-index.js
docs/client-http/implementors/error_chain/: trait.ChainedError.js
docs/client-http/sda_client_http/: SdaHttpClientError.t.html  index.html  sidebar-items.js  struct.SdaHttpClient.html  struct.SdaHttpClientError.html
docs/client-http/src/sda_client_http/: lib.rs.html  (+3 more)
docs/client-store/: search-index.js
docs/client-store/sda_client_store/: index.html  sidebar-items.js  struct.Filebased.html  struct.SdaClientStoreError.html  trait.Store.html  type.SdaClientStoreResult.html
docs/client/sda_client/: Clerking.t.html  EncryptionKeypair.t.html  KeyStorage.t.html  ParticipantInput.t.html  SdaClient.t.html  SdaClientError.t.html  SdaClientResult.t.html  index.html  sidebar-items.js  struct.EncryptionKeypair.html  struct.ParticipantInput.html  struct.SdaClient.html  struct.SdaClientError.html  struct.SignatureKeypair.html  trait.Clerking.html  trait.KeyStorage.html  trait.Keystore.html  trait.Maintenance.html  trait.Participating.html  trait.Receiving.html  type.SdaClientResult.html
docs/integration-tests/: search-index.js
docs/integration-tests/sda_tests/: TestContext.t.html  fn.new_agent.html  fn.new_client.html  fn.new_full_agent.html  fn.new_key_for_agent.html  fn.with_server.html  fn.with_service.html  index.html  new_agent.v.html  new_client.v.html  new_full_agent.v.html  new_key_for_agent.v.html  sidebar-items.js  struct.TestContext.html  with_server.v.html  with_service.v.html
docs/protocol/: search-index.js
docs/protocol/sda_protocol/: AdditiveEncryptionScheme.t.html  AggregationId.t.html  AggregationStatus.t.html  ClerkingJob.t.html  ClerkingJobId.t.html  Committee.t.html  Encryption.t.html  EncryptionKey.t.html  LabelledVerificationKey.t.html  LinearMaskingScheme.t.html  LinearSecretSharingScheme.t.html  SdaAggregationService.t.html  SdaBaseService.t.html  SdaErrorKind.t.html  SdaRecipientService.t.html  SdaResult.t.html  SdaService.t.html  Signature.t.html  SnapshotId.t.html  VerificationKeyId.t.html  enum.AdditiveEncryptionScheme.html  enum.Encryption.html  enum.EncryptionKey.html  enum.LinearMaskingScheme.html  enum.LinearSecretSharingScheme.html  enum.SdaErrorKind.html  enum.Signature.html  enum.SigningKey.html  enum.VerificationKey.html  index.html  sidebar-items.js  struct.Agent.html  struct.AgentId.html  struct.Aggregation.html  struct.AggregationId.html  struct.AggregationStatus.html  struct.ClerkCandidate.html  struct.ClerkingJob.html  struct.ClerkingJobId.html  struct.ClerkingResult.html  (+23 more)
docs/server/: search-index.js
docs/server-cli/: search-index.js
docs/server-cli/sda_server_cli/: add_store_args.v.html  add_verbose_arg.v.html  build_backend_server.v.html  build_mongo_server.v.html  fn.add_store_args.html  fn.add_verbose_arg.html  fn.build_backend_server.html  fn.build_mongo_server.html  fn.setup_slog.html  index.html  setup_slog.v.html  sidebar-items.js
docs/server-cli/sdad/: index.html
docs/server-http/: search-index.js
docs/server-http/sda_server_http/: fn.handle.html  fn.listen.html  handle.v.html  index.html  sidebar-items.js
docs/server-store-mongodb/: search-index.js
docs/server-store-mongodb/sda_server_store_mongodb/: fn.from_bson.html  fn.from_doc.html  fn.new_mongodb_server.html  fn.new_mongodb_server_for_url.html  fn.to_bson.html  fn.to_doc.html  from_bson.v.html  from_doc.v.html  index.html  new_mongodb_server.v.html  new_mongodb_server_for_url.v.html  sidebar-items.js  to_bson.v.html  to_doc.v.html
docs/server/sda_server/: SdaServer.t.html  fn.new_jfs_server.html  index.html  new_jfs_server.v.html  sidebar-items.js  struct.SdaServer.html  struct.SdaServerService.html
integration-tests/: Cargo.toml
integration-tests/src/: aggregation.rs  crud.rs  lib.rs
integration-tests/tests/: aggregation.rs  crud.rs  full_loop.rs  service.rs
mockserver/: Cargo.toml
mockserver/src/: lib.rs  server.rs
protocol/: Cargo.toml
protocol/src/: byte_arrays.rs  crypto.rs  helpers.rs  lib.rs  messages.rs  methods.rs  protocol.rs  resources.rs  services.rs
restserver/: README.md
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: lib.rs  main.rs
server-http/: Cargo.toml  README.md
server-http/src/: lib.rs
server-store-mongodb/: Cargo.toml
server-store-mongodb/src/: agents.rs  aggregations.rs  auth_tokens.rs  clerking_jobs.rs  lib.rs
server/src/: errors.rs  lib.rs  server  server.rs  snapshot.rs  stores.rs
server/src/jfs_stores/: agents.rs  aggregations.rs  auth.rs  auth_tokens.rs  authentication.rs  clerking_jobs.rs  mod.rs
server/tests/: crud_tests.rs
(+253 files in other folders)
