[package]
name = "sda"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
sda-protocol = { path="../protocol" }
sda-client = { path="../client" }
sda-client-store = { path= "../client-store" }
sda-client-http = { path= "../client-http" }
error-chain = { version = "0.10", default-features=false }
clap = "2.10"
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.5"