[package]
name = "sda-client-http"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
sda-protocol = { path= "../protocol" }
sda-client-store = { path= "../client-store" }
rand = "0.3"
error-chain = { version = "0.10", default-features=false }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
reqwest = "0.4"