[package]
name = "sda-tests"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
lazy_static="0.2"
mongodb={ version="0.2", optional=true}
rand = "0.3"
rouille = "1.0.1"
tempdir = "0.3.5"
sda-protocol = { path= "../protocol" }
sda-server = { path= "../server" }
sda-server-http = { path= "../server-http", optional=true }
sda-client = { path= "../client" }
sda-client-store = { path= "../client-store" }
sda-client-http = { path= "../client-http", optional=true }
sda-server-store-mongodb = { path = "../server-store-mongodb", optional=true }
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.3.5"

[features]
http = ["sda-server-http", "sda-client-http" ]
mongo = ["sda-server-store-mongodb", "mongodb"]
