[package]
name = "sda-protocol"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
error-chain = { version="0.10", default-features=false }
uuid = { version="0.4", features=["v4", "serde"] }
