[package]
name = "sdad"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
clap="2.20"
sda-protocol = { path= "../protocol" }
sda-server = { path= "../server" }
sda-server-http = { path= "../server-http" }
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.3.5"
