[package]
name = "sda-server-store-mongodb"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
sda-protocol = { path= "../protocol" }
sda-server = { path= "../server" }
mongodb = "0.2"
bson = "0.4"
slog = "1.5"
slog-scope = "0.2"
