[package]
name = "sda-server-store-mongodb"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
bson = "0.4"
mongodb = "0.2"
sda-protocol = { path= "../protocol" }
sda-server = { path= "../server" }
serde = "0.9"
serde_derive = "0.9"
slog = "1.5"
slog-scope = "0.2"
