[package]
name = "sda-server"
version = "0.1.0"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>", 
    "Morten Dahl <mortendahlcs@gmail.com>"
]

[dependencies]
itertools = "0.5.9"
sda-protocol = { path= "../protocol" }
error-chain = { version = "0.10", default-features=false }
jfs = "0.3"
serde = "0.9"
serde_derive = "0.9"
uuid = "0.4"
